# FastApi

./: .gitignore  Cargo.toml  README.md  app.py  config.yml  docker-compose.yml  requirements.txt  test.py
.github/workflows/: pythonapp.yml
api_provider/: base_provider.py  proxy_provider.py  rdbms_provider.py
apigen_app/: Cargo.toml
apigen_app/src/: main.rs
common/: Cargo.toml
config/: Cargo.toml
config/resources/examples/: FullYmlConfig.yml
config/src/: auth_parser.rs  data_provider_parser.rs  lib.rs  transforms_parser.rs  yaml_reader.rs
config/tests/: yaml_reader_test.rs
contract/: Cargo.toml
contract/src/: config_contract.rs  definitions.rs  lib.rs
contract/src/domain/: mod.rs
contract/src/domain/auth_provider/: base_auth.rs  mod.rs  oauth2_auth.rs  oauth2base_auth.rs  proxy_auth.rs  proxy_token_auth.rs
contract/src/domain/data_provider/: mod.rs  mongo_data_provider.rs  postgres_data_provider.rs  postgres_utils.rs  proxy_data_provider.rs  test_data_provider.rs
contract/src/domain/data_provider/mongo_data_provider/: mod.rs  provider.rs  query_option.rs  query_type.rs
contract/src/domain/data_provider/postgres_data_provider/: mod.rs  provider.rs
contract/src/domain/data_provider/proxy_data_provider/: mod.rs
contract/src/domain/data_provider/query_provider/: mod.rs  mongo_query_provider.rs  postgres_query_provider.rs
contract/src/domain/data_provider/test_data_provider/: mod.rs
contract/src/domain/endpoint/: crud_endpoint.rs  mod.rs
contract/src/domain/transformer_provider/: chain_transformer.rs  mod.rs
contract/src/domain/web/: mod.rs
managers/: manager.py
parser/: providers.py  test_providers.py
provider/: provider_factories.py
web/: Cargo.toml  api_generator.py
web/endpoint/: endpoint_factory.py
(+1 files in other folders)
