[package]
name = "apigen_app"
version = "0.1.0"
authors = ["Sergey Murzin <sergey.murzin@dataart.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
apigen_common = { path = "../common" }
apigen_config = { path = "../config" }
apigen_contract = { path = "../contract" }
apigen_web = { path = "../web" }
lazy_static = "1.4.0"
