[package]
name = "apigen_config"
version = "0.1.0"
authors = ["Sergey Murzin <sergey.murzin@dataart.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
apigen_contract = { path = "../contract" }
log = "*"
serde = "1.0"
serde_yaml = "0.8"
yaml-rust = "0.4"
lazy_static = "1.4.0"
rust-embed="5.2.0"