[package]
name = "apigen_contract"
version = "0.1.0"
authors = ["Sergey Murzin <sergey.murzin@dataart.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
linked-hash-map = "0.5.2"
json="*"
delegate="*"
isahc = { version ="0.8.2", features = ["json"]}
core_extensions = "0.1.14"
strfmt = "0.1.6"
serde = { version = "*", features = ["derive"] }
serde_json="*"